--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
 # Core dependencies
+torch>=2.2.1
+transformers>=4.37.2
+pandas>=2.2.1
+numpy>=1.26.4
+
+# API and Vector Database
 openai>=1.12.0
-pinecone-client>=3.0.0
-numpy>=1.21.0
-pandas>=1.3.0
-python-dotenv>=0.19.0
+pinecone-client>=3.0.3
 
-# ML & NLP
-transformers>=4.30.0
-torch>=2.0.0
-scikit-learn>=1.0.0
+# Environment and Configuration
+python-dotenv>=1.0.1
 
-# Utilities
-tqdm>=4.65.0
-requests>=2.31.0
-urllib3>=2.0.0
+# Web Interface
+streamlit>=1.29.0
 
-# Development & testing
-pytest>=7.0.0
-pytest-cov>=4.0.0
-black>=22.0.0
-flake8>=6.0.0
-streamlit
+# Development and Testing
+tqdm>=4.66.1
+scikit-learn>=1.3.2
+
+# Optional Dependencies
+evaluate>=0.4.1
+datasets>=2.16.0
